# ghc-ppc64le-miscompilation

./: Main.hs  cabal.project.local  test.cabal
cbits/: test.c  test.h
