cabal-version:       2.2
name:                test
version:             0.0.0.1
build-type:          Simple

executable test
  main-is: Main.hs
  default-language:    Haskell2010
  build-depends:       base                 >= 4.11   && < 5

  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wnoncanonical-monad-instances
                       -Wredundant-constraints
                       -ddump-to-file
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -fhide-source-paths
  default-extensions:  CApiFFI
                     , ForeignFunctionInterface
                     , LambdaCase
                     , StrictData
  other-extensions:    CPP
                     , DeriveGeneric
                     , GeneralizedNewtypeDeriving
                     , PatternSynonyms
  c-sources:           cbits/test.c
  include-dirs:        cbits/
  includes:            test.h
